--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ ul{
  padding: 0 15px-;
 }
 body{
-    background: #141414;
+    background: gray;
 }
 .header-container {
     display: flex;
@@ -231,7 +231,7 @@ color: #f0f0f0;
         font-size: 20px;
         max-width: 150px
         ;
-        height: 40px;
+        height: 40px
     }
     .footer-box{
         flex-direction: column;
